@@ -1,5 +1,10 @@
 2007-02-09  Masayuki Ataka  <masayuki.ataka@gmail.com>
 
+	* tex-jp.el (TeX-japanese-process-input-coding-system)
+	(TeX-japanese-process-output-coding-system): Do not use
+	default-coding-system to set process-coding-system, anymore.  The
+	value is set to shift_jis or euc-jp depending on window-system.
+
 	* tex-bar.el: Fix typo.  Reported by Ikumi Keita
 	<ikumi@ikumi.que.jp>.
 
